# OCR-VAFP

./: README.md  pyproject.toml
chandra/: __init__.py  app.py  settings.py
chandra/core/: input.py  model.py  output.py
